--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Blog</title>
+    <title>Awesome Personal Blog</title>
       <meta name="referrer" content="no-referrer">
-      <link rel="canonical" href="https://sirchanmp.github.io/Sirchanmp"/>
+      <link rel="canonical" href="https://uuchanmp.github.io/uuchanmp"/>
       <meta http-equiv="content-security-policy" content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;">
 </head>
 <body style="height:100%">
@@ -15,7 +15,7 @@
    </div>
    
    <nav class="navbar navbar-expand-lg pill-nav">
-      <a class="navbar-brand" href=#>Sirchanmp</a>
+      <a class="navbar-brand" href=#>Uuchanmp</a>
       <button class="navbar-toggler"
                 type="button"
                 data-toggle="collapse"
@@ -25,8 +25,8 @@
    <div class="collapse navbar-collapse" id="navbarNav">
      <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#blog">Blogs</a></li>
+        <li class="nav-item"><a class="nav-link" href="#page">Pages</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
     </ul>
   </div></nav>
@@ -34,15 +34,15 @@
    <section id="home" data-sr-id="0" style="visibility:visible;opacity:1;transform:matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1);transition:all,opacity 1s ease-in-out,transform 1s ease-in-out">
       <div class="container">
       <h2>Hi! I'm </h2>
-      <h1 data-value="Sirchanmp">@sirchanmp</h1>
-         <p class="typing" style="padding-bottom:10px">I am an organizer of <b>Mracme,Inc</b>, the branch of <i>non-profit main foundation</i> <b>Mcmpacme,Inc</b>.<br>
-         I'm also an hobbyist in <i>deployings</i></p>
+      <h1 data-value="Uuchanmp">@uuchanmp</h1>
+         <p class="typing" style="padding-bottom:10px">I am a Foundation Owner of <b>Mcmpacme Foundation</b>, <i>non-profit foundation</i> <b> for Educational projects.</b>.<br>
+         I'm also an hobbyist in <i>web-deployings</i></p>
  
       <div class="col-md-12 text-center">
-         <a href=https://github.com/sirchanmp><i class="fab fa-github fa-lg text-light mr-3 social-icons"></i></a>
+         <a href=https://github.com/uuchanmp><i class="fab fa-github fa-lg text-light mr-3 social-icons"></i></a>
          <a href=https://twitter.com/sirchanmp><i class="fab fa-twitter fa-lg text-light mr-3 social-icons"></i></a>
-         <a href=https://linkedin.com/in/sirchanmp><i class="fab fa-linkedin fa-lg text-light mr-3 social-icons"></i></a>
-         <a href=mailto:drcklinn@protonmail.com><i class="far fa-envelope fa-lg text-light social-icons"></i></a>
+         <a href=https://social.vivaldi.net/@uuchanmp><i class="fab fa-mastodon fa-lg text-light mr-3 social-icons"></i></a>
+         <a href=mailto:dr.chitkolinn@yahoo.com><i class="far fa-envelope fa-lg text-light social-icons"></i></a>
      </div>
     </section>
  </body>
@@ -51,14 +51,14 @@
    <h4>Power <br>by</h4>
    <div class="container">
    <div class="col-md-12 text-center">
-     <a href=https://github.com/sirchanmp><i class="fab fa-github fa-lg text-light mr-3 social-icons"></i></a>
+     <a href=https://github.com/uuchanmp><i class="fab fa-github fa-lg text-light mr-3 social-icons"></i></a>
      <a href=https://twitter.com/sirchanmp><i class="fab fa-twitter fa-lg text-light mr-3 social-icons"></i></a>
-     <a href=https://linkedin.com/in/sirchanmp><i class="fab fa-linkedin fa-lg text-light mr-3 social-icons"></i></a>
-     <a href=mailto:drchanmp@proton.me><i class="far fa-envelope fa-lg text-light social-icons"></i></a>
+     <a href=https://social.vivaldi.net/@uuchanmp><i class="fab fa-mastodon fa-lg text-light mr-3 social-icons"></i></a>
+     <a href=mailto:dr.chitkolinn@yahoo.com><i class="far fa-envelope fa-lg text-light social-icons"></i></a>
    </div><br>
    <div class="row">
    <div class="col-md-12 text-center">
-   <p style="font-size:smaller">Built using Vanilla HTML, CSS &amp; JavaScript.</p></div>
+   <p style="font-size:smaller">Built using gh-pages.</p></div>
   </div>
  </div>
 </footer>
