--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Personal Blog</title>
       <meta name="referrer" content="no-referrer">
+      ```
+      html
+      <link rel="authorization_endpoint" href="https://uuchanmp.github.io/auth/" />
+      ```
       <link rel="canonical" href="https://uuchanmp.github.io/uuchanmp"/>
       <meta http-equiv="content-security-policy" content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;">
 </head>
